<?xml version="1.0" encoding="utf-8"?>
    <resources>  
        <!--Other string resources also defined in this file… --> 
        <string name="app_name">Senior_Project</string> 
        <string name="feedbacktitle">Please enter your information</string>
        <string name="feedbackname">Please enter your username</string>
        <string name="feedbackweight">Please enter your weight</string>  
        <string name="gender">Gender</string>
        <string name="feedbackbutton">Send Feedback</string>
        <string name="feedbackresponse"></string>
        <string name="information">Information</string>
        <string name="diet">Diet</string>
        <string name="exercise">Exercise</string>
        <string name="tracking">Tracking</string>
        <string name="exit">Exit</string>
        <string name="feedbacktype1">Praise</string>  
        <string name="feedbacktype2">Gripe</string>  
        <string name="feedbacktype3">Suggestion</string>  
        <string name="feedbacktype4">Bug</string>
        <string name="feedbacktype">Type</string>
        <string name="days">Days</string>
        <string name="weeks">Weeks</string>
        <string name="months">Months</string>
		<string name="time">Time frame</string>
		<string name="password">Please enter your password</string>
		<string name="verifyPassword">Please verify your password</string>
		
		    
		<string name="lbs">lbs</string>
		<string name="kg">kg</string>
		<string name="userWeight">Weight</string>
		<string name="Weight">weight</string>
		<string name="infoWeight">weight info</string>
		<string name="goalWeight">goal weight</string>
		
		<string name="breakfastchoice">Breakfast</string>
		<string name="lunchchoice">Lunch</string>
		<string name="dinnerchoice">Dinner</string>
		
		<string name="lightchoice">Light</string>
		<string name="moderatechoice">Moderate</string>
		<string name="intensechoice">Intense</string>
		
	    <string name="eggs">Eggs</string>
	    <string name="pancakes">Pancakes</string>
	    <string name="bacon">Bacon</string>
	    
        <string name="turkey">Turkey Sandwich</string>
        <string name="burger">Burger</string>
        <string name="sub">Sub</string>
	        
        <string name="steak">Steak</string>
        <string name="roast">Roast</string>
        <string name="ribs">Ribs</string>
        
        <string name="walk">Walking</string>
      	<string name="yoga">Yoga</string>
      	<string name="bicycle">Bicycling</string>
      	
   	    <string name="jogging">Light Jogging</string>
   	    <string name="speedwalk">Speed Walking</string>
  	    <string name="pushup">Push Ups</string>
  	    
        <string name="marathon">Marathon</string>
        <string name="weightlift">Weight Lifting</string>
        <string name="cardio">Cardio</string>
      
    <string-array name="timeframe">     
    	<item>@string/days</item>
        <item>@string/weeks</item>  
        <item>@string/months</item>
    </string-array> 
    
    <string-array name="infoWeightArray">     
    	<item>@string/lbs</item>
        <item>@string/kg</item>  
    </string-array> 
    
    <string-array name="weightArray">     
    	<item>@string/lbs</item>
        <item>@string/kg</item>  
    </string-array> 
    
    <string-array name="foodCategories">     
    	<item>@string/breakfastchoice</item>
        <item>@string/lunchchoice</item>  
        <item>@string/dinnerchoice</item>
    </string-array> 
    
    <string-array name="exerCategories">     
    	<item>@string/lightchoice</item>
        <item>@string/moderatechoice</item>  
        <item>@string/intensechoice</item>
    </string-array> 
    
    <string-array name="breakfast">     
    	<item>@string/eggs</item>
        <item>@string/pancakes</item>  
        <item>@string/bacon</item>
    </string-array> 
    
   	<string-array name="lunch">     
    	<item>@string/turkey</item>
        <item>@string/burger</item>  
        <item>@string/sub</item>
    </string-array> 
    
    <string-array name="dinner">     
    	<item>@string/steak</item>
        <item>@string/roast</item>  
        <item>@string/ribs</item>
    </string-array> 
    
    <string-array name="light">     
    	<item>@string/walk</item>
        <item>@string/yoga</item>  
        <item>@string/bicycle</item>
    </string-array> 
    
    <string-array name="moderate">     
    	<item>@string/jogging</item>
        <item>@string/speedwalk</item>  
        <item>@string/pushup</item>
    </string-array> 
    
    <string-array name="intense">     
    	<item>@string/marathon</item>
        <item>@string/weightlift</item>  
        <item>@string/cardio</item>
    </string-array> 
                
            
        
        
    <string-array name="userinfo">     
        <item>@string/feedbacktype1</item>  
        <item>@string/feedbacktype2</item>  
        <item>@string/feedbacktype3</item>  
        <item>@string/feedbacktype4</item>  
    </string-array> 
</resources>  