<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/laidout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="400px"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:hint="@string/feedbackname"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:hint="@string/password"
        android:inputType="textPassword" >

        <requestFocus >
        </requestFocus>
    </EditText>

    <EditText
        android:id="@+id/verifyPass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:hint="@string/verifyPassword"
        android:inputType="textPassword" >

        <requestFocus >
        </requestFocus>
    </EditText>

    <EditText
        android:id="@+id/EditTextWeight"
        android:layout_width="500px"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:hint="@string/feedbackweight"
        android:inputType="textEmailAddress" >
    </EditText>

    <TextView
        android:id="@+id/dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="" />

    <Button
        android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="Enter Birthdate" />

    <CheckBox
        android:id="@+id/user_pass"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Save Username and Password?" >
    </CheckBox>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="Female" />

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="Male" />
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="200px"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:onClick="sendFeedback"
        android:text="@string/feedbackbutton" >
    </Button>

</LinearLayout>
